feat: implements api to import channel messages and ui
