# apps/api/src/features/channels/channels.module.ts
@@ -1,0 +1,10 @@
+import { Module } from '@nestjs/common';
+
+import { ChannelsController } from './channels.controller';
+import { ChannelsService } from './channels.service';
+
+@Module({
+  controllers: [ChannelsController],
+  providers: [ChannelsService],
+})
+export class ChannelsModule {}
