# apps/api/src/features/channels/dto/index.ts
@@ -1,4 +1,4 @@
-export * from './channel.dto';
+export * from './channels.dto';
 export * from './dm.dto';
 export * from './get-channel.dto';
 export * from './get-channels.dto';
